...
        android:layout_gravity="center"
        card_view:cardBackgroundColor="@color/cardBackGround"
        card_view:cardCornerRadius="0dp"
        card_view:cardElevation="4dp">

        <TextView
            android:id="@+id/location_next_zone_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto_black"
            android:gravity="center"
            android:text="Go to Non-Fiction"
            android:textColor="@color/colorLightText"
...
