...
            android:layout_height="wrap_content"
            android:text="W"
            android:textAlignment="center"
            android:textSize="30sp" />

        <Button
            android:id="@+id/question_skip_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip_question" />

    </LinearLayout>

...
