...
        android:layout_height="0dp"
        android:layout_weight="70"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/title_start_button"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/titleButtonMarginBottom"
            android:layout_marginHorizontal="@dimen/titleButtonMarginHorizontal"
            android:backgroundTint="@color/colorButtonPink"
...
