...
                        android:textColor="@color/colorDarkText"
                        android:textSize="@dimen/questionAnswerAnswerTextSize" />

                </LinearLayout>

                <Button
                    android:id="@+id/button_question_answer_done"
                    style="@style/ButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="20"
...
