<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:keepScreenOn="true"
    android:orientation="vertical"
    android:weightSum="100">

    <ListView
        android:id="@+id/LV_summary_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="90" />

    <Button
        android:id="@+id/button_summary_replay"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_weight="10"
        android:background="#00000000"
        android:fontFamily="@font/roboto_regular"
        android:text="REPLAY"
        android:textColor="@color/colorDarkText"
        android:textSize="@dimen/summaryButtonTextSize" />

</LinearLayout>