...
            android:textAlignment="center"
            android:textColor="@color/colorLightText"
            android:textSize="@dimen/congratsBodyTextSize" />
    </LinearLayout>

    <Button
        android:id="@+id/button_congrats_view_summary"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/congratsButtonMarginBottom"
        android:layout_marginTop="@dimen/congratsButtonMarginTop"
...
